# nanosemantics

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.conf  server.cpp
books/: 8.txt
client/: CMakeLists.txt
client/include/: NSClient.h
client/src/: NSClient.cpp
server/: CMakeLists.txt
server/include/: NSServer.h  NSThreadPool.h
server/src/: NSServer.cpp  NSThreadPool.cpp  main.cpp
server/tests/: CMakeLists.txt  test_NSServer.cpp  test_NSThreadPool.cpp
tests/: check_only_spaces_nums_letters_lowcase.py
utils/: only_spaces_nums_letters_lowcase.py  word_counter.py
